Add cards decoration: japanese reading
