# pkg/proto/learning_cards/v1/review.pb.validate.go
@@ -311,6 +311,40 @@ func (m *GetReviewCardsResponse) validate(all bool) error {
 
 	}
 
+	for idx, item := range m.GetFullCards() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetReviewCardsResponseValidationError{
+						field:  fmt.Sprintf("FullCards[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetReviewCardsResponseValidationError{
+						field:  fmt.Sprintf("FullCards[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetReviewCardsResponseValidationError{
+					field:  fmt.Sprintf("FullCards[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
 	if len(errors) > 0 {
 		return GetReviewCardsResponseMultiError(errors)
 	}
